# torch-js

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .npmignore  .prettierignore  CMakeLists.txt  LICENSE  README.md  build.js  package.json
.github/workflows/: ci.yml  cuda-test.yml  main.yml  publish-npm.yml  publish-prebuild-test.yml  publish-prebuild.yml  publish.yml
.github/workflows/scripts/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
examples/: Creation.md  Operations.md  ScriptModule.md  Tensor.md
lib/: bindings.d.ts  index.ts  torch.d.ts  torch.js
patches/: 0001-Remove-native-image-support.patch  0001-cmake-patch.patch
src/: ATen.cc  ATen.h  FunctionWorker.cc  FunctionWorker.h  ScriptModule.cc  ScriptModule.h  Tensor.cc  Tensor.h  addon.cc  constants.cc  constants.h  utils.cc  utils.h
tests/: rand.test.js  runTorch.js  scriptmodule.test.js  tensor.test.js
tests/resources/: test_model.pt
